<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/omerimpson"
            />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/toolbar_f_size"

            />
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="@dimen/items_margin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_v"
            android:textSize="@dimen/textview_f_size"
            android:layout_marginRight="@dimen/eidt_interval"
            />
        <EditText
            android:layout_gravity="center"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/name_w"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/items_margin2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_v"
            android:textSize="@dimen/textview_f_size"
            android:layout_marginRight="@dimen/eidt_interval"
            />
        <EditText
            android:layout_gravity="center"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/age_w"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/items_margin2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_v"
            android:textSize="@dimen/textview_f_size"
            android:layout_marginRight="@dimen/eidt_interval"
            />
        <EditText
            android:layout_gravity="center"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/weight_w"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/items_margin2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_v"
            android:textSize="@dimen/textview_f_size"
            android:layout_marginRight="@dimen/eidt_interval"
            />
        <EditText
            android:layout_gravity="center"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:hint="@string/height_w"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/items_margin2"
        android:layout_gravity="center"
        >
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_m"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_f"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_done_v"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/items_margin2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="결과값 출력 조건문 써야 댐"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/items_margin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/omerimpson"
            />
    </LinearLayout>

</LinearLayout>